# proposal-engine

./: pyproject.toml  requeriments.txt  requirements.txt
app/: main.py
app/services/: ppt_generator copy.py  ppt_generator.py
