[tool.poetry]
name = "proposal-engine"
version = "0.1.0"
description = "Proposal generator service"
authors = ["Junior"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.110.0"
uvicorn = {extras = ["standard"], version = "0.27.1"}
python-pptx = "0.6.23"
requests = "2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"